# middleware/authValidator.js
@@ -1,0 +1,27 @@
+const Validator = require('validatorjs');
+
+const validateAuth = (req, res, next) => {
+  const data = req.body;
+
+//   if (req.body.jobLink && !req.body.jobLink.startsWith('http')) {
+//     req.body.jobLink = 'https://' + req.body.jobLink;
+//   }
+
+  const rules = {
+    email: 'required|email',
+    password: 'required|string|min:6'
+  };
+
+  const validation = new Validator(data, rules);
+
+  if (validation.fails()) {
+    return res.status(400).json({
+      message: 'Validation failed',
+      errors: validation.errors.all()
+    });
+  }
+
+  next(); // move to controller if validation passes
+};
+
+module.exports = validateAuth;
